integration_tests/tests/integration_tests/snapshots/integration_tests__cnft_tests_v2_leaf_schema__verify_creator_v2.snap
---
source: integration_tests/tests/integration_tests/cnft_tests_v2_leaf_schema.rs
expression: response
---
{
  "interface": "MplBubblegumV2",
  "id": "7zKon1FrkcHr8cQnEmch9fWn6mfNgihxQz7kqqTVtDE2",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/my-nft.json",
    "files": [],
    "metadata": {
      "name": "My NFT",
      "symbol": "",
      "token_standard": "NonFungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "6icBGQeHh9JV6D7pbnmmZKScvwW4DYq44xrcTDn3SWan",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "FT4xQ6PiuXGP4pahaLnGssqyBZf6rpe6e7z4YwNYoAGg",
    "creator_hash": "CDnbfAr1fRb8Zw3bAoyPRypY6a6zhbLukLVithjrB78H",
    "collection_hash": "3mG2ogUZaUxX7TKRbDNDUPnesYghsd87YFAduqs4TETk",
    "asset_data_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "flags": 0,
    "asset_hash": "9QtTYirkijTswr3ANmVwEumMuisWKrcfwHte7hD8v8FH",
    "tree": "76zosRZ8UkgkM8wPBL4DuMZftfB23J8qUinRHP2GzAws",
    "seq": 2,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.05,
    "basis_points": 500,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [
    {
      "address": "H3yvcTxKeWEnFq1QEWFNeruUjfVHyz3PthhuG7jDuWfR",
      "share": 60,
      "verified": true
    },
    {
      "address": "9jYboy8ANZxBczeA3fungWHwTEgStU8EgExxDuAjrH6U",
      "share": 40,
      "verified": false
    }
  ],
  "ownership": {
    "frozen": false,
    "non_transferable": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "9vzDufZApYwYNbK1HueZvZK42cNG192mmxHvjSRAoSBo"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": null
  },
  "mutable": true,
  "burnt": false
}
